--- a/website/index.html
+++ b/website/index.html
@@ -10,9 +10,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="960_12_col.css">
-    <link rel="stylesheet" href="screen.css">
+    <link rel="stylesheet" href="screen.min.css">
     <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-21665893-1']);
@@ -28,7 +26,7 @@
 <body>
 <div id="intro">
     <div id="header" class="container_12">
-        <a href="#" class="grid_4 alpha"><img src="images/phantomjs-logo.png" alt="PhantomJS" id="logo" width="240" height="80"></a>
+        <a href="http://www.phantomjs.org/" class="grid_4 alpha"><img src="images/phantomjs-logo.png" alt="PhantomJS" id="logo" width="240" height="80"></a>
         <ul id="nav" class="grid_8 omega">
             <li><a href="http://code.google.com/p/phantomjs/wiki/SourceCode?tm=4">Source Code</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/PhantomJS?tm=6">Documentation</a></li>
@@ -48,7 +46,7 @@
                 PhantomJS is a headless WebKit with JavaScript API.
                 It has <strong>fast</strong> and <strong>native</strong> support for various web standards: 
                 DOM handling, CSS selector, JSON, Canvas, and SVG.<br>
-                PhantomJS is created by <a href="">Ariya Hidayat</a>.
+                PhantomJS is created by <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a>.
             </p>
             <p class="action">
                 <a href="http://code.google.com/p/phantomjs/downloads/list" id="download">Download <span class="version">v1.4</span></a>
@@ -65,8 +63,7 @@ var <span class="object">url</span> = <span class="literal">"http://www.phantomj
 <span class="object">page</span>.<span class="function">open</span>(url, <span class="function">function</span> (status) {
     <span class="comment">//Page is loaded!</span>
     <span class="object">phantom</span>.<span class="function">exit</span>();
-});
-            </pre>
+});</pre>
         </div>
     </div>
 </div>
@@ -92,7 +89,9 @@ var <span class="object">url</span> = <span class="literal">"http://www.phantomj
         <h3>Headless Website Testing</h3>
         <div>
             <p>
-                PhantomJS works with testing frameworks such as Jasmine, QUnit or CasperJS.
+                Run functional tests with frameworks such as Jasmine, QUnit or CasperJS.
+                <br>
+                <a href="http://code.google.com/p/phantomjs/wiki/TestFrameworkIntegration">Learn more</a>
             </p>
         </div>
     </div>
@@ -103,6 +102,8 @@ var <span class="object">url</span> = <span class="literal">"http://www.phantomj
                 Access and manipulate webpages
                 with the standard DOM API, or with
                 usual libraries like jQuery.
+                <br>
+                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#DOM_Manipulation">Learn more</a>
             </p>
         </div>
     </div>
@@ -110,8 +111,9 @@ var <span class="object">url</span> = <span class="literal">"http://www.phantomj
         <h3>SVG Rendering</h3>
         <div>
             <p>
-                PhantomJS is built with the popular rendering engine Webkit
-                and can render SVG graphics.
+                Render SVG graphics with the built-in Webkit rendering engine.
+                <br>
+                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#Rendering">Learn more</a>
             </p>
         </div>
     </div>
@@ -119,17 +121,24 @@ var <span class="object">url</span> = <span class="literal">"http://www.phantomj
         <h3>Network Monitoring</h3>
         <div>
             <p>
-                PhantomJS can generate HAR files to 
-                for page loading speed monitoring.
+                Monitor page speed loading. Export as standard HAR files.
+                <br>
+                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#Network_traffic">Learn more</a>
             </p>
         </div>
+    </div>
+    <div id="feature-end" class="grid_12">
+        <p>
+        PhantomJS can also integrate with webservices (XML, JSONP, YQL) and with test frameworks (Jasmine, QUnit). 
+        <a href="http://code.google.com/p/phantomjs/wiki/QuickStart">See more examples</a>
+        </p>
     </div>
 </div>
 
 <div id="footer">
     <div id="footer-content" class="container_12">
         <p>
-            &copy; Copyright 2010-2012 Ariya Hidayat &mdash; Design by <a href="http://svay.com/">Maurice Svay</a>
+            &copy; Copyright 2010-2012 <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a> &mdash; Website design by <a href="http://svay.com/">Maurice Svay</a>
         </p>
     </div>
 </div>
