Point straight to GitHub for the source code.

--- a/build.html
+++ b/build.html
@@ -45,7 +45,7 @@
     <div id="header" class="container_12">
         <a href="index.html" class="grid_4 alpha"><img src="images/phantomjs-logo.png" alt="PhantomJS" id="logo" width="240" height="80"></a>
         <ul id="nav" class="grid_8 omega">
-            <li><a href="http://code.google.com/p/phantomjs/wiki/SourceCode?tm=4">Source Code</a></li>
+            <li><a href="https://github.com/ariya/phantomjs">Source Code</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/PhantomJS?tm=6">Documentation</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/Interface">API</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/QuickStart">Examples</a></li>
