--- a/download.html
+++ b/download.html
@@ -64,12 +64,12 @@
 
         <p>Download service is kindly provided by <a href="http://code.google.com/p/phantomjs/downloads/">Google Code Project Hosting</a>.</p>
 
-        <h2>Windows</h2>
+        <h2 id="windows">Windows</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.0-win32-static.zip">phantomjs-1.6.0-win32-static.zip</a> (6.4 MB) and extract (unzip) the content.</p>
         <p>The executable <code>bin/phantomjs.exe</code> is ready to use.</p>
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Windows (as old as Windows XP). There is no requirement to install Qt or any other libraries.</p>
 
-        <h2>Mac OS X</h2>
+        <h2 id="mac">Mac OS X</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.0-macosx-static.zip">phantomjs-1.6.0-macosx-static.zip</a> (9.9 MB) and extract (unzip) the content.</p>
         <p>The executable <code>bin/phantomjs.exe</code> is ready to use.</p>
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Snow Leopard or later versions. There is no requirement to install Qt or any other libraries.</p>
@@ -77,7 +77,7 @@
         <pre>brew update &amp;&amp; brew install phantomjs</pre>
         <p><strong>Warning</strong>: MacPorts does not have updated PhantomJS build yet. Installing via MacPorts is not recommended.</p>
 
-        <h2>Linux</h2>
+        <h2 id="linux">Linux</h2>
         <p>For 32-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.0-linux-i686-dynamic.tar.bz2">phantomjs-1.6.0-linux-i686-dynamic.tar.bz2</a> (13.5 MB).</p>
         <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.0-linux-x86_64-dynamic.tar.bz2">phantomjs-1.6.0-linux-x86_64-dynamic.tar.bz2</a> (13.5 MB).</p>
     </ul>
@@ -87,7 +87,7 @@
 
         <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). For older systems, please compile PhantomJS from source (see below).</p>
 
-        <h2>Source Code</h2>
+        <h2 id="source">Source Code</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.0-source.zip">phantomjs-1.6.0-source.zip</a> (37.6 MB) and follow the <a href="build.html">build instructions</a>.</p>
     </div>
 
