--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
 
         <h2 id="mac">Mac OS X</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.1-macosx-static.zip">phantomjs-1.6.1-macosx-static.zip</a> (9.3 MB) and extract (unzip) the content.</p>
-        <p>The executable <code>bin/phantomjs.exe</code> is ready to use.</p>
+        <p>The binary <code>bin/phantomjs</code> is ready to use.</p>
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Snow Leopard or later versions. There is no requirement to install Qt or any other libraries.</p>
         <p><strong>Alternative</strong> installation using Homebrew:</p>
         <pre>brew update &amp;&amp; brew install phantomjs</pre>
