--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
     </div>
     <div id="feature-end" class="grid_12">
         <p>
-        PhantomJS can also integrate with webservices (XML, JSONP, YQL) and with test frameworks (Jasmine, QUnit). 
-        <a href="http://code.google.com/p/phantomjs/wiki/QuickStart">See more examples</a>
+        PhantomJS is used in the test workflow of various open-source projects:<br/>
+        <a href="http://modernizr.com/">Modernizr</a>,
+        <a href="http://modernizr.com/">CodeMirror</a>,
+        <a href="http://emberjs.com/">Ember.js</a>,
+        <a href="http://yuilibrary.com/projects/yui3/">YUI3</a>,
+        <a href="https://github.com/jonleighton/poltergeist">Poltergeist</a>, and many more.
         </p>
     </div>
 </div>
