Move FAQ from the wiki.
http://code.google.com/p/phantomjs/issues/detail?id=662

--- a/build.html
+++ b/build.html
@@ -49,7 +49,7 @@
             <li><a href="http://code.google.com/p/phantomjs/wiki/PhantomJS?tm=6">Documentation</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/Interface">API</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/QuickStart">Examples</a></li>
-            <li><a href="http://code.google.com/p/phantomjs/wiki/FAQ">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
         </ul>
     </div>
 
