--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         <h3>Network Monitoring</h3>
         <div>
             <p>
-                Monitor page speed loading. Export as standard HAR files.
-                <br>
+                Monitor page speed loading. Export as standard HAR files. Analyze using YSlow.
                 <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#Network_traffic">Learn more</a>
             </p>
         </div>
