Mocha tests can run with PhantomJS.
See https://github.com/metaskills/mocha-phantomjs.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         <h3>Headless Website Testing</h3>
         <div>
             <p>
-                Run functional tests with frameworks such as Jasmine, QUnit or CasperJS.
+                Run functional tests with frameworks such as Jasmine, QUnit, Mocha, or CasperJS.
                 <br>
                 <a href="http://code.google.com/p/phantomjs/wiki/TestFrameworkIntegration">Learn more</a>
             </p>
