Move release notes from the wiki.
http://code.google.com/p/phantomjs/issues/detail?id=662

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
     <h2>Community:</h2>
     <ul>
         <li>
-            <a href="http://code.google.com/p/phantomjs/wiki/ReleaseNotes" id="link-release">Read the release notes</a>
+            <a href="release-1.6.html" id="link-release">Read the release notes</a>
         </li>
         <li>
             <a href="https://groups.google.com/forum/#!forum/phantomjs" id="link-ml">Join the mailing list</a>
