Link to the all-new wiki pages.

--- a/index.html
+++ b/index.html
@@ -89,13 +89,22 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         <h3>Headless Website Testing</h3>
         <div>
             <p>
-                Run functional tests with frameworks such as Jasmine, QUnit, Mocha, or CasperJS.
-                <br>
-                <a href="http://code.google.com/p/phantomjs/wiki/TestFrameworkIntegration">Learn more</a>
+                Run functional tests with frameworks such as Jasmine, QUnit, Mocha, Capybara, WebDriver, and many others.
+                <a href="https://github.com/ariya/phantomjs/wiki/Headless-Testing">Learn more</a>
             </p>
         </div>
     </div>
     <div id="feature-02" class="feature grid_3">
+        <h3>Screen Capture</h3>
+        <div>
+            <p>
+                Programmatically capture web contents, including SVG and Canvas.
+                Create web site screenshots with thumbnail preview.
+                <a href="https://github.com/ariya/phantomjs/wiki/Screen-Capture">Learn more</a>
+            </p>
+        </div>
+    </div>
+    <div id="feature-03" class="feature grid_3">
         <h3>Site Scraping</h3>
         <div>
             <p>
@@ -107,22 +116,12 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
             </p>
         </div>
     </div>
-    <div id="feature-03" class="feature grid_3">
-        <h3>SVG Rendering</h3>
-        <div>
-            <p>
-                Render SVG graphics with the built-in Webkit rendering engine.
-                <br>
-                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#Rendering">Learn more</a>
-            </p>
-        </div>
-    </div>
     <div id="feature-04" class="feature grid_3 omega">
         <h3>Network Monitoring</h3>
         <div>
             <p>
-                Monitor page speed loading. Export as standard HAR files. Analyze using YSlow.
-                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#Network_traffic">Learn more</a>
+                Monitor page loading and export as standard HAR files. Automate performance analysis using YSlow and Jenkins.
+                <a href="https://github.com/ariya/phantomjs/wiki/Network-Monitoring">Learn more</a>
             </p>
         </div>
     </div>
