--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         <a href="http://codemirror.net/">CodeMirror</a>,
         <a href="http://emberjs.com/">Ember.js</a>,
         <a href="http://yuilibrary.com/projects/yui3/">YUI3</a>,
-        <a href="https://github.com/jonleighton/poltergeist">Poltergeist</a>, and many more.
+        and <a href="https://github.com/ariya/phantomjs/wiki/Users">many more</a>.
         </p>
     </div>
 </div>
