Download 1.7.0 for Mac OS X.

--- a/download.html
+++ b/download.html
@@ -70,7 +70,7 @@
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Windows (as old as Windows XP). There is no requirement to install Qt or any other libraries.</p>
 
         <h2 id="mac">Mac OS X</h2>
-        <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.1-macosx-static.zip">phantomjs-1.6.1-macosx-static.zip</a> (9.3 MB) and extract (unzip) the content.</p>
+        <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-macosx.zip">phantomjs-1.7.0-macosx.zip</a> (9.9 MB) and extract (unzip) the content.</p>
         <p>The binary <code>bin/phantomjs</code> is ready to use.</p>
         <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Snow Leopard or later versions. There is no requirement to install Qt or any other libraries.</p>
         <p><strong>Alternative</strong> installation using Homebrew:</p>
