--- a/download.html
+++ b/download.html
@@ -65,9 +65,9 @@
         <p>Download service is kindly provided by <a href="http://code.google.com/p/phantomjs/downloads/">Google Code Project Hosting</a>.</p>
 
         <h2 id="windows">Windows</h2>
-        <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.1-win32-static.zip">phantomjs-1.6.1-win32-static.zip</a> (6.3 MB) and extract (unzip) the content.</p>
+        <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-windows.zip">phantomjs-1.7.0-windows.zip</a> (6.5 MB) and extract (unzip) the content.</p>
         <p>The executable <code>bin/phantomjs.exe</code> is ready to use.</p>
-        <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Windows (as old as Windows XP). There is no requirement to install Qt or any other libraries.</p>
+        <p><strong>Note</strong>: For this static build, the binary is self-contained with no external dependency. It will run on a fresh install of Windows XP or later versions. There is no requirement to install Qt, WebKit, or any other libraries.</p>
 
         <h2 id="mac">Mac OS X</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-macosx.zip">phantomjs-1.7.0-macosx.zip</a> (9.9 MB) and extract (unzip) the content.</p>
