More stubs for Blazing Star.

--- a/release-1.7.html
+++ b/release-1.7.html
@@ -76,13 +76,17 @@
 
 <div class="grid_10">
 
-<p>PhantomJS 1.7, <em><a href="release-names.html">Blazing Star</a></em>, was released on September 22, 2011. It added module system support (modelled after CommonJS), better cookies handling, and other small improvements.</p>
+<p>PhantomJS 1.7, <em><a href="release-names.html">Blazing Star</a></em>, was released on September 22, 2012. It added module system support (modelled after CommonJS), better cookies handling, and other small improvements.</p>
 
 <p><strong>Module system</strong></p>
 
 <p>(To be written)</p>
 
 <p><strong>Cookies handling</strong></p>
+
+<p>(To be written)</p>
+
+<p><strong>More events</strong></p>
 
 <p>(To be written)</p>
 
