Link the revamped wiki pages.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </p>
             <p class="action">
                 <a href="download.html" id="download">Download <span class="version">v1.7</span></a>
-                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart">Get started</a>
+                <a href="https://github.com/ariya/phantomjs/wiki/Quick-Start">Get started</a>
             </p>
         </div>
         <div id="intro-example" class="grid_5 omega">
@@ -105,14 +105,14 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         </div>
     </div>
     <div id="feature-03" class="feature grid_3">
-        <h3>Site Scraping</h3>
+        <h3>Page Automation</h3>
         <div>
             <p>
                 Access and manipulate webpages
                 with the standard DOM API, or with
                 usual libraries like jQuery.
                 <br>
-                <a href="http://code.google.com/p/phantomjs/wiki/QuickStart#DOM_Manipulation">Learn more</a>
+                <a href="https://github.com/ariya/phantomjs/wiki/Page-Automation">Learn more</a>
             </p>
         </div>
     </div>
