--- a/release-names.html
+++ b/release-names.html
@@ -60,9 +60,9 @@
         <a href="index.html" class="grid_4 alpha"><img src="images/phantomjs-logo.png" alt="PhantomJS" id="logo" width="240" height="80"></a>
         <ul id="nav" class="grid_8 omega">
             <li><a href="https://github.com/ariya/phantomjs">Source Code</a></li>
-            <li><a href="http://code.google.com/p/phantomjs/wiki/PhantomJS?tm=6">Documentation</a></li>
+            <li><a href="https://github.com/ariya/phantomjs/wiki">Documentation</a></li>
             <li><a href="http://code.google.com/p/phantomjs/wiki/Interface">API</a></li>
-            <li><a href="http://code.google.com/p/phantomjs/wiki/QuickStart">Examples</a></li>
+            <li><a href="https://github.com/ariya/phantomjs/wiki/Examples">Examples</a></li>
             <li><a href="faq.html">FAQ</a></li>
         </ul>
     </div>
