--- a/download.html
+++ b/download.html
@@ -78,14 +78,11 @@
         <p><strong>Warning</strong>: MacPorts does not have updated PhantomJS build yet. Installing via MacPorts is not recommended.</p>
 
         <h2 id="linux">Linux</h2>
-        <p>For 32-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.1-linux-i686-dynamic.tar.bz2">phantomjs-1.6.1-linux-i686-dynamic.tar.bz2</a> (13.8 MB).</p>
-        <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.6.1-linux-x86_64-dynamic.tar.bz2">phantomjs-1.6.1-linux-x86_64-dynamic.tar.bz2</a> (13.8 MB).</p>
+        <p>For 32-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-i686.tar.bz2">phantomjs-1.7.0-linux-i686.tar.bz2</a> (12.4 MB).</p>
+        <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-x86_64.tar.bz2">phantomjs-1.7.0-linux-x86_64.tar.bz2</a> (12.6 MB).</p>
     </ul>
 
-        <p>The executable <code>bin/phantomjs</code> file must be kept in the same place relative to the lib/ directory, so it's best to symlink it:</p>
-        <pre>ln -s /path/to/download/bin/phantomjs /usr/local/bin/phantomjs</pre>
-
-        <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). For older systems, please compile PhantomJS from source (see below).</p>
+        <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. For older systems, please compile PhantomJS from source (see below).</p>
 
         <h2 id="source">Source Code</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-source.zip">phantomjs-1.7.0-source.zip</a> (37.7 MB) and follow the <a href="build.html">build instructions</a>.</p>
