--- a/release-1.7.html
+++ b/release-1.7.html
@@ -140,32 +140,32 @@ page.open(url, function () {
 <p><strong>New features</strong></p>
 
 <ul>
-    <li>Added a module system modelled after CommonJS/Node.js (issue 47)
-    <li>Added support for window pop-up (issue 151)
-    <li>Static build on Linux (issue 413)
-    <li>Added run-time detection of SSL support (issue 484)
-    <li>Added more events support (issue 492, 712)
-    <li>Added support for disabling automatic proxy detection (issue 580)
-    <li>Provided page closing callback (issue 678)
-    <li>Added methods to access URL, frames URL, frame Content (issue 758)
-    <li>Added more cookies-related API (issue 761)
+    <li>Added a module system modelled after CommonJS/Node.js (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=47">47</a>)
+    <li>Added support for window pop-up (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=151">151</a>)
+    <li>Static build on Linux (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=413">413</a>)
+    <li>Added run-time detection of SSL support (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=484">484</a>)
+    <li>Added more events support (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=492">492</a>, <a href="http://code.google.com/p/phantomjs/issues/details?id=712">712</a>)
+    <li>Added support for disabling automatic proxy detection (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=580">580</a>)
+    <li>Provided page closing callback (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=678">678</a>)
+    <li>Added methods to access URL, frames URL, frame Content (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=758">758</a>)
+    <li>Added more cookies-related API (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=761">761</a>)
 </ul>
 
 <p><strong>Improvements</strong></p>
 
 <ul>
-    <li>Refactored command-line options handling (issue 55)
-    <li>Improved the workflow for producing release builds (issue 599)
-    <li>Improved cookies API and implementation (issue 603, 761)
-    <li>Improved frame switching API (issue 654)
-    <li>Fixed iframe handling regression (issue 683)
-    <li>Fixed OS version number with Windows 8 and Mountain Lion (issue 684, 688)
-    <li>Fixed HAR navigation info in the netsniff example (issue 733)
-    <li>Fixed compile warnings with Visual Studio (issue 744)
-    <li>Removed hacks for static linking on Windows (issue 753)
-    <li>Added ICO image handling on Windows (issue 779)
-    <li>Fixed font antialiasing on Windows (issue 785)
-    <li>Improved Jasmine test runner for Jasmine 1.2 (issue 792)
+    <li>Refactored command-line options handling (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=55">55</a>)
+    <li>Improved the workflow for producing release builds (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=599">599</a>)
+    <li>Improved cookies API and implementation (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=603">603</a>, <a href="http://code.google.com/p/phantomjs/issues/details?id=761">761</a>)
+    <li>Improved frame switching API (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=654">654</a>)
+    <li>Fixed iframe handling regression (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=683">683</a>)
+    <li>Fixed OS version number with Windows 8 and Mountain Lion (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=684">684</a>, <a href="http://code.google.com/p/phantomjs/issues/details?id=688">688</a>)
+    <li>Fixed HAR navigation info in the netsniff example (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=733">733</a>)
+    <li>Fixed compile warnings with Visual Studio (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=744">744</a>)
+    <li>Removed hacks for static linking on Windows (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=753">753</a>)
+    <li>Added ICO image handling on Windows (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=799">779</a>)
+    <li>Fixed font antialiasing on Windows (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=785">785</a>)
+    <li>Improved Jasmine test runner for Jasmine 1.2 (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=792">792</a>)
 </ul>
 
 <p>Back to <a href="releases.html">all releases</a>.</p>
