Link to the new API wiki page.

--- a/contributing.html
+++ b/contributing.html
@@ -57,7 +57,7 @@
         <ul id="nav" class="grid_8 omega">
             <li><a href="https://github.com/ariya/phantomjs">Source Code</a></li>
             <li><a href="https://github.com/ariya/phantomjs/wiki">Documentation</a></li>
-            <li><a href="http://code.google.com/p/phantomjs/wiki/Interface">API</a></li>
+            <li><a href="https://github.com/ariya/phantomjs/wiki/API-Reference">API</a></li>
             <li><a href="https://github.com/ariya/phantomjs/wiki/Examples">Examples</a></li>
             <li><a href="faq.html">FAQ</a></li>
         </ul>
