New entries on the FAQ.
See http://groups.google.com/d/topic/phantomjs/FKXCdViqY8I for details.

--- a/faq.html
+++ b/faq.html
@@ -69,6 +69,22 @@
     thousands of source files. Using the binary package is highly recommended.
     It is fast to download and <a href="download.html">easy to install</a>.</p>
 
+    <p><strong>Q: Can you give a time estimate of the availability of feature X?</strong></p>
+
+    <p>Because nobody is working full time on PhantomJS, there is no way to
+    predict the exact timing of the completion of a particular feature.
+    Every contributor to PhantomJS works on his own pace, sometimes it can
+    take a few release cycles until a certain feature is shipped.</p>
+
+    <p><strong>Q: Is there any update on issue XYZ??</strong></p>
+
+    <p>Any progress related to an issue, whether it is a change in the plan
+    or an implementation check-in, will be always posted to the issue
+    page. This is part of PhantomJS contribution guide, it is essential to
+    the development workflow. If an issue hasn't received any new update
+    for a while, a question like "Is there any update?" has an obvious
+    answer.</p>
+
     <p><strong>Q: Why do I get build failure with PhantomJS 1.5 after successfully
     compiled 1.4?</strong></p>
 
