--- a/release-1.8.html
+++ b/release-1.8.html
@@ -81,11 +81,16 @@
 <p><strong>New features</strong></p>
 
 <ul>
+    <li>Added an option to set the SSL protocol (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=174">174</a>)
+    <li>Added support for modifier keys for the key event (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=835">835</a>)
+    <li>Added a limit for authentication attempts (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=826">826</a>)
 </ul>
 
 <p><strong>Improvements</strong></p>
 
 <ul>
+    <li>Fixed date parsing in ISO8601 format (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=187">187</a> ,<a href="http://code.google.com/p/phantomjs/issues/details?id=267">267</a>)
+    <li>Fixed mouse double-click event (issue <a href="http://code.google.com/p/phantomjs/issues/details?id=848">848</a>)
 </ul>
 
 <p>Back to <a href="releases.html">all releases</a>.</p>
