--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ var <span class="object">url</span> = <span class="literal">'http://www.phantomj
         <p>
         PhantomJS is used in the test workflow of various open-source projects:<br/>
         <a href="http://modernizr.com/">Modernizr</a>,
+        <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>,
         <a href="http://codemirror.net/">CodeMirror</a>,
         <a href="http://emberjs.com/">Ember.js</a>,
         <a href="http://yuilibrary.com/projects/yui3/">YUI3</a>,
