PhantomJS 1.8 is Blue Winter Rose.
http://code.google.com/p/phantomjs/issues/detail?id=863

--- a/release-1.8.html
+++ b/release-1.8.html
@@ -76,7 +76,7 @@
 
 <div class="grid_10">
 
-<p>PhantomJS 1.8 is still in the development. It is scheduled to be released on December 21, 2012.</p>
+<p>PhantomJS 1.8, <a href="release-names.html">Blue Winter Rose</a>, is still in the development. It is scheduled to be released on December 21, 2012.</p>
 
 <p><strong>New features</strong></p>
 
