--- a/release-names.html
+++ b/release-names.html
@@ -78,6 +78,29 @@
 
     <div class="grid_10">
 
+        <h2>PhantomJS 1.8 "Blue Winter Rose"</h2>
+
+<p><a href="http://awoiaf.westeros.org/index.php/File:Blue_Roses1.jpg"><img src="http://awoiaf.westeros.org/images/8/83/Blue_Roses1.jpg" width="225" align="right"></a></p>
+<p>The <b>Blue Winter Rose</b> is a flower that grows in the glass gardens of Winterfell.
+It's pale blue the color of frost. Also, it's connected to the legend of <b>Bael the Bard</b>.</p>
+
+<blockquote>
+    Bael the Bard climbed the Wall.<br/>
+    Took the Kingsroad and entered Winterfell.<br/>
+    He made himself known as Sygerrik of Skagos, a singer.<br/>
+    He sang until midnight for the Lord's pleasure.<br/>
+    Impressed by his skills, Lord Brandon Stark asked him what rewarded he wanted.<br/>
+    Bael asked for the most beautiful flower in Winterfell's gardens.<br/>
+    Blue winter roses were just blooming.<br/>
+    Brandon Stark agreed to offer him one.<br/>
+</blockquote>
+
+<p>The following morning, the virgin daughter of the lord had disappeared. In her bed was a Blue Winter Rose.</p>
+
+<p>Source: <a href="http://awoiaf.westeros.org/index.php/Blue_winter_rose">A wiki of Ice and Fire</a>.</p>
+<br clear="all"/>
+<p class ="credit">Photo by christopher goodband <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0</a>.</p>
+
         <h2>PhantomJS 1.7 "Blazing Star"</h2>
 
 <p><a href="http://commons.wikimedia.org/wiki/File:Liatris_spicata_close-up.jpg"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Liatris_spicata_close-up.jpg/220px-Liatris_spicata_close-up.jpg" align="right"></a></p>
