Linux install: Mention basic rendering libs (FreeType, Fontconfig).
http://code.google.com/p/phantomjs/issues/detail?id=904

--- a/download.html
+++ b/download.html
@@ -82,7 +82,8 @@
         <p>For 64-bit system, download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-linux-x86_64.tar.bz2">phantomjs-1.7.0-linux-x86_64.tar.bz2</a> (12.6 MB).</p>
     </ul>
 
-        <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. For older systems, please compile PhantomJS from source (see below).</p>
+        <p>This package is built on Ubuntu Lucid (10.04). It should run successfully on Lucid or more modern systems (including other distributions). There is no requirement to install Qt, WebKit, or any other libraries. It is however expected that some base libraries necessary for rendering (<a href="http://www.freetype.org/">FreeType</a>, <a href="http://www.freedesktop.org/wiki/Software/fontconfig">Fontconfig</a>) and the basic font files are available in the system.</p>
+        <p>For older systems, please compile PhantomJS from source (see below).</p>
 
         <h2 id="source">Source Code</h2>
         <p>Download <a href="http://phantomjs.googlecode.com/files/phantomjs-1.7.0-source.zip">phantomjs-1.7.0-source.zip</a> (37.7 MB) and follow the <a href="build.html">build instructions</a>.</p>
