Mention known issues on Microsoft Windows.
http://code.google.com/p/phantomjs/issues/detail?id=580
http://code.google.com/p/phantomjs/issues/detail?id=845

--- a/release-1.7.html
+++ b/release-1.7.html
@@ -168,6 +168,13 @@ page.open(url, function () {
     <li>Improved Jasmine test runner for Jasmine 1.2 (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=792">792</a>)
 </ul>
 
+<p><strong>Known Issues on Microsoft Windows</strong></p>
+
+<ul>
+    <li>Very slow network performance. The workaround is to set <a href="https://github.com/ariya/phantomjs/wiki/API-Reference#wiki-command-line-options">proxy type</a> to &quot;<tt>none</tt>&quot; (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=580">580</a>)
+    <li>Some graphics drivers may cause mysterious crash (issue <a href="http://code.google.com/p/phantomjs/issues/detail?id=845">845</a>)
+</ul>
+
 <p>Back to <a href="releases.html">all releases</a>.</p>
 
 </div>
